v1.0.0/modules/schema/pages/class/OilSpecimen.adoc
= `OilSpecimen`
:toclevels: 4



[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:OilSpecimen`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Specimen.adoc[`Specimen`]
*** *`OilSpecimen`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
OilSpecimen {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}









AssetTestSampleTaker {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



LabTestDataSet {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







OilSpecimen -> AssetTestSampleTaker: AssetTestSampleTaker


OilSpecimen -> LabTestDataSet: LabTestDataSet


OilSpecimen -> DiagramObject: DiagramObjects


OilSpecimen -> InstanceSet: InstanceSet


OilSpecimen -> Name: Names


OilSpecimen -> ChangeSetMember: PropertiesCIMDataObject


OilSpecimen -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<oilSampleTakenFrom,`oilSampleTakenFrom`>>
| 0..1
| xref::enumeration/OilSampleLocation.adoc[`OilSampleLocation`]
| +++Location from which oil sample taken.+++

| <<oilSampleTemperature,`oilSampleTemperature`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Oil sample temperature.+++

| <<oilTemperatureSource,`oilTemperatureSource`>>
| 0..1
| xref::enumeration/OilTemperatureSource.adoc[`OilTemperatureSource`]
| +++Source of oil temperature.+++

| <<sampleContainer,`sampleContainer`>>
| 0..1
| xref::enumeration/SampleContainerType.adoc[`SampleContainerType`]
| +++Type of sample container.+++

| <<AssetTestSampleTaker,`AssetTestSampleTaker`>>
| 0..1
| xref::class/AssetTestSampleTaker.adoc[`AssetTestSampleTaker`]
| +++Test sampler taker who gathered this specimen.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<ambientTemperatureAtSampling,`ambientTemperatureAtSampling`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Operating ambient temperature (in °C).+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<humidityAtSampling,`humidityAtSampling`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Operating ambient humidity (in percent).+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<specimenID,`specimenID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Identifier of specimen used in inspection or test.+++

| <<specimenSampleDateTime,`specimenSampleDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time sample specimen taken.+++

| <<specimenToLabDateTime,`specimenToLabDateTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Date and time the specimen was received by the lab.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<LabTestDataSet,`LabTestDataSet`>>
| 0..*
| xref::class/LabTestDataSet.adoc[`LabTestDataSet`]
| +++Results from lab testing done on specimen.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ambientTemperatureAtSampling]
=== `ambientTemperatureAtSampling`
+++Operating ambient temperature (in °C).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.ambientTemperatureAtSampling`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]

| Inherited from
| xref::class/Specimen.adoc[`Specimen`]


|===

//[discrete]
[#AssetTestSampleTaker]
=== `AssetTestSampleTaker`
+++Test sampler taker who gathered this specimen.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.AssetTestSampleTaker`
| Cardinality
| 0..1
| Type
| xref::class/AssetTestSampleTaker.adoc[`AssetTestSampleTaker`]

| Inherited from
| xref::class/Specimen.adoc[`Specimen`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#humidityAtSampling]
=== `humidityAtSampling`
+++Operating ambient humidity (in percent).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.humidityAtSampling`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/Specimen.adoc[`Specimen`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#LabTestDataSet]
=== `LabTestDataSet`
+++Results from lab testing done on specimen.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.LabTestDataSet`
| Cardinality
| 0..*
| Type
| xref::class/LabTestDataSet.adoc[`LabTestDataSet`]

| Inherited from
| xref::class/Specimen.adoc[`Specimen`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#oilSampleTakenFrom]
=== `oilSampleTakenFrom`
+++Location from which oil sample taken.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OilSpecimen.oilSampleTakenFrom`
| Cardinality
| 0..1
| Type
| xref::enumeration/OilSampleLocation.adoc[`OilSampleLocation`]


|===

//[discrete]
[#oilSampleTemperature]
=== `oilSampleTemperature`
+++Oil sample temperature.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OilSpecimen.oilSampleTemperature`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

//[discrete]
[#oilTemperatureSource]
=== `oilTemperatureSource`
+++Source of oil temperature.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OilSpecimen.oilTemperatureSource`
| Cardinality
| 0..1
| Type
| xref::enumeration/OilTemperatureSource.adoc[`OilTemperatureSource`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#sampleContainer]
=== `sampleContainer`
+++Type of sample container.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:OilSpecimen.sampleContainer`
| Cardinality
| 0..1
| Type
| xref::enumeration/SampleContainerType.adoc[`SampleContainerType`]


|===

//[discrete]
[#specimenID]
=== `specimenID`
+++Identifier of specimen used in inspection or test.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.specimenID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/Specimen.adoc[`Specimen`]


|===

//[discrete]
[#specimenSampleDateTime]
=== `specimenSampleDateTime`
+++Date and time sample specimen taken.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.specimenSampleDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Specimen.adoc[`Specimen`]


|===

//[discrete]
[#specimenToLabDateTime]
=== `specimenToLabDateTime`
+++Date and time the specimen was received by the lab.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Specimen.specimenToLabDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/Specimen.adoc[`Specimen`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


